# coco_tools

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
js/: index.js
modules/: coco_image_loader.py  coco_json.py  coco_json_reader.py  coco_json_val_finder.py  coco_load_exr.py  coco_loader.py  coco_noise.py  coco_rand_int.py  coco_regex_find.py  coco_saver.py  coco_split_frequencies.py  coco_walk_folder.py  coco_zdepth.py  frequency_combine.py  frequency_separation.py  json.py  json_reader.py  json_value.py  load_all.py  load_exr.py  load_exr_layer_by_name.py  noise.py  regex_find.py  save_all.py  split_threebands.py  zdepth.py
scripts/: spec_generator.py
spec_folder/spec_0001/: spec.json
spec_folder/spec_0002/: spec.json
spec_folder/spec_0003/: spec.json
spec_folder/spec_0004/: spec.json
spec_folder/spec_0005/: spec.json
spec_folder/spec_0006/: spec.json
spec_folder/spec_0007/: spec.json
spec_folder/spec_0008/: spec.json
spec_folder/spec_0009/: spec.json
spec_folder/spec_0010/: spec.json
spec_folder/spec_0011/: spec.json
spec_folder/spec_0012/: spec.json
spec_folder/spec_0013/: spec.json
spec_folder/spec_0014/: spec.json
spec_folder/spec_0015/: spec.json
spec_folder/spec_0016/: spec.json
spec_folder/spec_0017/: spec.json
spec_folder/spec_0018/: spec.json
spec_folder/spec_0019/: spec.json
spec_folder/spec_0020/: spec.json
spec_folder/spec_0021/: spec.json
spec_folder/spec_0022/: spec.json
spec_folder/spec_0023/: spec.json
workflows/: coco_frequency_separation.json  coco_threeway_split.json
(+78 files in other folders)
